Replace JDBC with Arrow in DuckDB evaluator